[package]
name = "ackount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
csv-async = {version = "1.1", features = ["tokio"] }
serde = {version = "1.0.137", features = ["derive"] }
futures-core = "0.3.21"
futures = "0.3.21"
async-stream = "0.3.3"
assert_approx_eq = "1.1.0"
